:wrench: Make TestFX shut up
Signed-off-by: palexdev <alessandro.parisi406@gmail.com>